--- a/src/components/linechart.css
+++ b/src/components/linechart.css
@@ -6,8 +6,11 @@ h1.coinpair {
 }
 
 .tooltip{
-    width:100px;
+    position: relative;
+    border: 2px solid black;
+    width:300px;
     height:300px;
     border-radius:30px;
     background-color: rgb(127,255,124,0.6);
+    opacity:0;
 }
