--- a/src/components/linechart.css
+++ b/src/components/linechart.css
@@ -8,8 +8,13 @@ div.title {
 h1.coinpair {
     position:relative;
     font-size:calc(16px -7vw);
-    width:50%;
+    width: 80%;
     color: #1fcea2;
+    border:2px solid black;
+    transition: all .3s;
+}
+h1.coinpair:hover {
+    border: 3px solid black;
 }
 
 .tooltip{
