--- a/src/components/linechart.css
+++ b/src/components/linechart.css
@@ -10,11 +10,11 @@ h1.coinpair {
     font-size:calc(16px -7vw);
     width: 80%;
     color: #1fcea2;
-    border:2px solid black;
+    border:1px solid black;
     transition: all .3s;
 }
 h1.coinpair:hover {
-    border: 3px solid black;
+    transform: scale(1.2);
 }
 
 .tooltip{
@@ -29,4 +29,8 @@ h1.coinpair:hover {
 #my_dataviz{
     border:1px solid black;
     width:100%;
+}
+img.coinlogo {
+    max-width: 10vw;
+    max-height:100px;
 }
