--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: azure;
+  background-color: rgb(188, 241, 241);
+  background-image: linear-gradient(white,rgb(161, 228, 228));
 }
 
 code {
